<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.LoadExerciseFragment">


    <TextView
        android:id="@+id/fragment_load_exercise_name"
        style="@style/Widget.check.TextView"
        android:layout_margin="@dimen/margin_between_elements"
        android:text="@string/fragment_check_exercise_name"
        android:textAlignment="center"
        app:layout_constraintEnd_toStartOf="@+id/fragment_load_exercise_set"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/fragment_load_exercise_set"
        style="@style/Widget.check.TextView"
        android:layout_below="@+id/fragment_load_exercise_name"
        android:layout_marginEnd="@dimen/margin_between_elements"
        android:text="@string/fragment_check_exercise_set"
        android:textAlignment="center"
        app:layout_constraintEnd_toStartOf="@+id/fragment_load_exercise_weight"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@+id/fragment_load_exercise_name"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/fragment_load_exercise_weight"
        style="@style/Widget.check.TextView"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="@dimen/margin_between_elements"
        android:text="@string/fragment_check_exercise_weight"
        android:textAlignment="center"
        app:layout_constraintEnd_toStartOf="@+id/fragment_load_exercise_count"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@+id/fragment_load_exercise_set"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/fragment_load_exercise_count"
        style="@style/Widget.check.TextView"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="@dimen/margin_between_elements"
        android:text="@string/fragment_check_exercise_count"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@+id/fragment_load_exercise_weight"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/divider"
        style="@style/Divider"
        android:layout_marginTop="@dimen/margin_between_elements"
        app:layout_constraintBottom_toTopOf="@+id/recyclerView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_load_exercise_count" />
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider">
    </androidx.recyclerview.widget.RecyclerView>

    <Button
        android:id="@+id/fragment_load_exercise_button"
        android:text="@string/fragment_load_exercise_button"
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>