<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.healthylife.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_loadExerciseFragment"
            app:destination="@id/loadExerciseFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_add"
        android:name="com.example.healthylife.ui.add.AddFragment"
        android:label="@string/title_check"
        tools:layout="@layout/fragment_add" />

    <fragment
        android:id="@+id/navigation_check"
        android:name="com.example.healthylife.ui.check.CheckFragment"
        android:label="@string/title_add"
        tools:layout="@layout/fragment_check">
        <action
            android:id="@+id/action_navigation_check_to_checkAddFragment"
            app:destination="@id/checkAddFragment" />
        <action
            android:id="@+id/action_navigation_check_to_checkDetailFragment"
            app:destination="@id/checkDetailFragment" />
    </fragment>
    <fragment
        android:id="@+id/checkAddFragment"
        android:name="com.example.healthylife.ui.check.CheckAddFragment"
        android:label="fragment_check_add"
        tools:layout="@layout/fragment_check_add" >

        <argument
            android:name="title"
            app:argType="string" />
        <argument
            android:name="exercise_id"
            android:defaultValue="-1"
            app:argType="integer" />
        <action
            android:id="@+id/action_checkAddFragment_to_navigation_check"
            app:destination="@id/navigation_check"
            app:popUpTo="@id/navigation_check"
            app:popUpToInclusive="true" />


    </fragment>
    <fragment
        android:id="@+id/checkDetailFragment"
        android:name="com.example.healthylife.ui.check.CheckDetailFragment"
        android:label="fragment_check_detail"
        tools:layout="@layout/fragment_check_detail" >

        <argument
            android:name="exercise_id"
            app:argType="integer" />
    </fragment>
    <fragment
        android:id="@+id/loadExerciseFragment"
        android:name="com.example.healthylife.ui.home.LoadExerciseFragment"
        android:label="LoadExerciseFragment" >
        <action
            android:id="@+id/action_loadExerciseFragment_to_navigation_home"
            app:destination="@id/navigation_home" />
    </fragment>
</navigation>